test tags 6, signature add

--- a/_posts/2015-01-23-About.md
+++ b/_posts/2015-01-23-About.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: About
-tags: nus ceg
+tags: [nus, ceg]
 ---
 I'm a student at NUS studying Computer Engineering (read: 75% Computer Science + 75% Electrical Engineering).
 
@@ -10,5 +10,3 @@ In this course we do almost everything related to computers with the ultimate ai
 Thinking back on this now, I can't believe I actually did all that. But trust me, it is satisfying to finally begin to understand the mysterious device known as a computer.
 
 Any juniors who happen to stumble across this blog are welcome to contact me for notes or advice. Any non-juniors are welcome to hire me :)
-
-<br><br>`- ksami`
