--- a/_posts/2015-01-23-PacVim.md
+++ b/_posts/2015-01-23-PacVim.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: PacVim
-tags: vim
+tags: [vim, games, learning]
 ---
 ![Copyright (c) 2007 Laurent Gregoire](http://www.vim.org/images/0xbabaf000l.png)
 
@@ -10,6 +10,5 @@ or are unsure of which editor to choose,
 here's a good chance to practise navigating in [Vim]. [PacVim](https://github.com/jmoon018/PacVim) is a game based on pacman
 using [Vim] commands to navigate the character and escape from ghosts.
 
-<br><br>`-ksami`
 
 [Vim]: http://www.vim.org/
