--- a/_posts/2015-01-28-00-MuddyV2.md
+++ b/_posts/2015-01-28-00-MuddyV2.md
@@ -13,7 +13,7 @@ Then, during university, I got more familiar with the *nix command-line and disc
 ![SDF MUD](../images/sdf-mud.png)  
 <span class="caption">SDF MUD running via telnet in Cygwin</span>
 
-I excitedly started building a MUD in NodeJS using socket.io for real-time communication, without any other framework or library or even a database (everything was stupidly stored in a bunch of JSON files). The codebase soon got too large and messy for me to handle or even begin to refactor. I managed to build it up to the point where combat, items and equipping were possible though; and of course chatting with other players. It is still live at (muddy-ksami.rhcloud.com)[http://muddy-ksami.rhcloud.com] though bugs crash it every now and then.
+I excitedly started building a MUD in NodeJS using socket.io for real-time communication, without any other framework or library or even a database (everything was stupidly stored in a bunch of JSON files). The codebase soon got too large and messy for me to handle or even begin to refactor. I managed to build it up to the point where combat, items and equipping were possible though; and of course chatting with other players. It is still live at [muddy-ksami.rhcloud.com](http://muddy-ksami.rhcloud.com) though bugs crash it every now and then.
 
 After neglecting the project for half a year thanks to the busiest semester in school yet, I've started rebuilding the codebase from scratch. This time, I'm using MeteorJS which has databases, templates and real-time reactivity built-in; not forgetting a whole bunch of packages to choose from. If you miss `npm` packages, they're also include-able using the [meteorhacks:npm](https://atmospherejs.com/meteorhacks/npm) Meteor package.
 
