fix image links

--- a/_posts/2015-01-28-MuddyV2.md
+++ b/_posts/2015-01-28-MuddyV2.md
@@ -11,7 +11,7 @@ However, I'm no artist and that was the main factor holding me back from creatin
 
 Then, during university, I got more familiar with the *nix command-line and discovered the ancestor of MMORPGs, the [multi-user dungeon (MUD)](http://en.wikipedia.org/wiki/MUD). A large number of them were text-based since during the early days there were no graphics. Some of them still survive to this day, having run for over 15 years! I was introduced to a world of games without graphics, no less exciting than MMORPGs.
 
-![SDF MUD](../images/sdf-mud.png)  
+![SDF MUD](../../../images/sdf-mud.png)  
 <span class="caption">SDF MUD running via telnet in Cygwin</span>
 
 I excitedly started building a MUD in NodeJS using socket.io for real-time communication, without any other framework or library or even a database (everything was stupidly stored in a bunch of JSON files). The codebase soon got too large and messy for me to handle or even begin to refactor. I managed to build it up to the point where combat, items and equipping were possible though; and of course chatting with other players. It is still live at [muddy-ksami.rhcloud.com](http://muddy-ksami.rhcloud.com) though bugs crash it every now and then.
