--- a/_posts/2015-04-16-Mods.md
+++ b/_posts/2015-04-16-Mods.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2015-04-16 18:01:55
 title: Mods
-tags: [programming, modding, Skyrim, DragonNest]
+tags: [programming, modding, Skyrim, DragonNest, games]
 ---
 Recently I went back to check on my mods over at [DNModz](http://www.dnmodz.com), a forum for Dragon Nest mods. It's been 2 years since I went back, things have changed of course. I don't think I'll continue modding for DN though it's too restrictive, not to mention its really cartoonish art style. Yet, I'm still kinda proud of my mods there mainly cos they're the first significant mods I've made so check it out if you play Dragon Nest, or even if you don't :)
 
