add note abt git log

--- a/_posts/2015-04-21-git-diff.md
+++ b/_posts/2015-04-21-git-diff.md
@@ -10,3 +10,6 @@ When using git at the command line, a quick way to check changes that have been 
 `git diff HEAD` shows changes that have been made after a `git add` but before a `git commit`.
 
 `git diff HEAD HEAD^` shows the difference between `HEAD` and its previous commit.
+
+
+`git log --decorate=short` will show where `HEAD` is as well as other tags.
