--- a/_posts/2015-04-01-Database.md
+++ b/_posts/2015-04-01-Database.md
@@ -2,7 +2,7 @@
 layout: post
 date: 2015-04-01 20:44:00
 title: Database
-tags: [database, SQL]
+tags: [database, SQL, notes]
 ---
 I wrote my notes while studying for database design in markdown so I thought I might as well share it here.
 
