--- a/_posts/2015-06-22-Summer.md
+++ b/_posts/2015-06-22-Summer.md
@@ -15,23 +15,31 @@ Side note: I've been meaning to get on with a redesign of the site but design ha
 
 It has been a really tough semester in SNU, what with 4 com science classes, 2 at 3rd year level, 2 at final year level, with 1 from each being taught in Korean >< But it's finally all over so no use worrying about grades and all that, what will happen will happen. I did learn some interesting topics that will probably help me in the future. I won't do a module review though, an exchange student has different circumstances from a regular student.
 
-<br><br>
+<br>
 
-In Image Processing, my group created an application to help with visualising hairstyles, the premise being people having a hard time communicating how they want their hair to be styled. The idea is: you *very conveniently* take a picture with any camera that you have, pass it through our application, and a 3D model of a (pre-generated) head will be displayed with your face on it and with different (pre-generated) hairstyles; the point being that it's a quick and easy thing and not having to setup multiple cameras, 3D scan or calibrate any parameters. The result can be seen below when a picture of Emma Watson was used as a sample; though not the exact head shape, it's close enough for visualisation purposes.
+In Image Processing, my group created an application to help with visualising hairstyles, the premise being people having a hard time communicating how they want their hair to be styled.
+
+The idea is: you *very conveniently* take a picture with any camera that you have, pass it through our application, and a 3D model of a (pre-generated) head will be displayed with your face on it and with different (pre-generated) hairstyles; the point being that it's a quick and easy thing and not having to setup multiple cameras, 3D scan or calibrate any parameters.
+
+The result can be seen below when a picture of Emma Watson was used as a sample; though not the exact head shape, it's close enough for visualisation purposes.
 
 ![head_f](../../../images/head_f.png)
 
-In truth, we had a really hard time trying to think of ideas. I came up with this idea with "for fun" as a motivating factor but obviously you can't use that kind of reasoning in an academic setting (right...?) and so we came up with this flimsy excuse. At the end I actually thought of more uses for such an application, eg. putting your face in a game, simple VR avatars etc. but I hadn't given those much thought and hence were too weak to use. By the way, for those interested, the head models and hair models and textures came from Granado Espada, leftover files from when I was modding.
+In truth, we had a really hard time trying to think of ideas. I came up with this idea with "for fun" as a motivating factor but obviously you can't use that kind of reasoning in an academic setting (right...?) and so we came up with this flimsy excuse.
 
-<br><br>
+At the end I actually thought of more uses for such an application, eg. putting your face in a game, simple VR avatars etc. but I hadn't given those much thought and hence were too weak to use. By the way, for those interested, the head models and hair models and textures came from Granado Espada, leftover files from when I was modding.
 
-For Database Design, my group came up with an Android application which, based on your previous locations, predicts using probabilities where you will be for the next 24 hours and shows you the weather forecast for the predicted locations. Not a very interesting app, yes, but it was simple enough for our aims of designing a database for a real-world situation. On that note, most of our time instead went into figuring out XML parsing, HTTP communication, Android app, working around differences between SQL and Android's SQLite and UI design. In fact, we were the only group in class who (unwisely?) decided to make an Android app instead of a web app; due mostly to my Korean group mates who, out of the 3 of them, only 1 was from com science and he only had experience with Android apps. Either way, we managed to have a working demo for the presentation so all's well that ends well.
+<br>
 
-<br><br>
+For Database Design, my group came up with an Android application which, based on your previous locations, predicts using probabilities where you will be for the next 24 hours and shows you the weather forecast for the predicted locations. Not a very interesting app, yes, but it was simple enough for our aims of designing a database for a real-world situation.
+
+On that note, most of our time instead went into figuring out XML parsing, HTTP communication, Android app, working around differences between SQL and Android's SQLite and UI design. In fact, we were the only group in class who (unwisely?) decided to make an Android app instead of a web app; due mostly to my Korean group mates who, out of the 3 of them, only 1 was from com science and he only had experience with Android apps. Either way, we managed to have a working demo for the presentation so all's well that ends well.
+
+<br>
 
 All I can say about Programming Language is I learned something about logic. I absolutely __cannot__ understand, though it was taught in English, why the logic has to be as convoluted as the prof taught it. More than half the class was lost by the first few weeks.
 
-<br><br>
+<br>
 
 Best for last huh. Multicore Programming gave me literal headaches for almost every assignment. Perhaps because the class was in Korean, or perhaps I did the assignments half-heartedly, some of my programs, including my final project, ended up not being parallel at all and I could not figure out why. After all, I'm not planning to go into Multicore research, I honestly only took this class to fulfill my graduation requirements.
 
