add mastering process

--- a/_posts/2015/11/2015-11-12-MUA1113-Masters.md
+++ b/_posts/2015/11/2015-11-12-MUA1113-Masters.md
@@ -6,3 +6,12 @@ tags: [music]
 ---
 
 <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/164628195&amp;color=0066cc&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
+
+---
+
+edit: Added process of mastering
+
+## Misc
+For all the tracks, I mastered them by firstly removing DC gain. Then I used volume automation to cut off the ends of the track. The tracks were EQ-ed again, cutting off the lowest and highest frequencies as well as emphasising the loudest frequencies by boosting them a little. The exciter was then applied to the tracks to add brightness. Stereo spread was used to further spread the sound left and right.
+
+The multi-channel compressor, multipressor, was then used to compress and increase the gain of the different frequency bands. I used this to emphasise the vocals more over the other instruments in the tracks with vocals. Finally, I used the limiter to set a -0.1dB limit on the tracks and boost gain to increase overall volume.
