--- a/_posts/2019/12/2019-12-01-Lime.md
+++ b/_posts/2019/12/2019-12-01-Lime.md
@@ -5,6 +5,6 @@ title: Lime
 tags: [music]
 ---
 
-<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/721053166&color=%23aeee00&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+<iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/721053166&amp;color=aeee00&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe>
 
 Smooth, chill, refreshing track with a side of twinkles
